--- a/index.html
+++ b/index.html
@@ -30,8 +30,17 @@
 			<li class="navbar__menu__item">Contact</li>
 		</ul>
 	</nav>
+	<!-- Home -->
+	<section id="home">
+		<img src="imgs/profile.jpeg" alt="Jinwoong's profile photo" class="home__avartar">
+		<h1 id="home__title">Hello, <br /> My name is Jinwoong Kim</h1>
+		<h2 id="home__description">blah blah</h2>
+		<button id="home__button">Contact Me</button>
+	</section>
 	<!-- About -->
-	<section id="about"></section>
+	<section id="about">
+
+	</section>
 	<!-- Skills -->
 	<section id="skills"></section>
 	<!-- Work -->
