--- a/index.html
+++ b/index.html
@@ -30,25 +30,89 @@
 			<li class="navbar__menu__item">Contact</li>
 		</ul>
 	</nav>
+
 	<!-- Home -->
 	<section id="home">
 		<img src="imgs/profile.jpeg" alt="Jinwoong's profile photo" class="home__avartar">
 		<h1 id="home__title">Hello, <br /> My name is Jinwoong Kim</h1>
-		<h2 id="home__description">blah blah</h2>
+		<h2 id="home__description">남다른 목표의식을 가지고 빠르게 성과를 낼 수 있는 준비된 지원자입니다.</h2>
 		<button id="home__button">Contact Me</button>
 	</section>
+
 	<!-- About -->
 	<section id="about">
+		<h1>About me</h1>
+		<p>의공학을 전공하며 학부 과정에서는 웨어러블 디바이스를 활용한 헬스케어 서비스에 관심이 있었습니다. 
+			헬스케어 스타트업에서 인턴으로 근무하며 웹/앱 서비스 개발에 대한 매력을 느껴 현재 삼성 청년 소프트웨어 아카데미 3기에서 웹 프론트엔드/백엔드 교육과정을 수료중입니다.
+			새로운 기술을 배우는 것을 좋아하고 빠르게 학습할 수 있습니다.
+		</p>
+		<div class="about__majors">
+			<div class="major"></div>
+			<div class="major__icon">
+				<i class="fab fa-html5"></i>
+			</div>
+			<div class="major__title">Front-end</div>
+			<div class="major__description">
+				HTML, CSS, JavaScript, 
+				<br /> Vue, Web APIs
+			</div>
+		</div>
+
+		<div class="about__majors">
+			<div class="major"></div>
+			<div class="major__icon">
+				<i class="fas fa-mobile-alt"></i>
+			</div>
+			<div class="major__title">Mobie</div>
+			<div class="major__description">
+				Android, Java
+			</div>
+		</div>
+
+		<div class="about__majors">
+			<div class="major"></div>
+			<div class="major__icon">
+				<i class="fas fa-server"></i>
+			</div>
+			<div class="major__title">Back-end</div>
+			<div class="major__description">
+				Django, Python, REST APIs
+			</div>
+		</div>
+
+		<div class="about__jobs">
+			<div class="job">
+				<img src="imgs/WELT.png" alt="welt" class="job__logo">
+				<p class="job__name">웰트 주식회사, 소프트웨어 엔지니어, 인턴</p>
+				<p class="jog__period">2019 June - 2019 Dec</p>
+			</div>
+			<div class="job">
+				<img src="imgs/ssafy.png" alt="ssafy" class="job__logo">
+				<p class="job__name">삼성 청년 SW 아카데미(SSAFY), 3기, 교육</p>
+				<p class="jog__period">2020 Jan - Current</p>
+			</div>
+		</div>
+	</section>
+
+	<!-- Skills -->
+	<section id="skills">
 
 	</section>
-	<!-- Skills -->
-	<section id="skills"></section>
+
 	<!-- Work -->
-	<section id="work"></section>
+	<section id="work">
+
+	</section>
+
 	<!-- testimonials -->
-	<section id="testimonials"></section>
+	<section id="testimonials">
+
+	</section>
+
 	<!-- Contact -->
-	<section id="contact"></section>
+	<section id="contact">
+
+	</section>
 </body>
 
 </html>
