--- a/index.html
+++ b/index.html
@@ -180,7 +180,24 @@
 
 	<!-- Work -->
 	<section id="work">
+		<h1>My work</h1>
+		<h3>Projects</h3>
+		<div class="work__categories">
+			<button class="category__btn">All <span class="category__count">5</span></button>
+			<button class="category__btn">Web<span class="category__count">2</span></button>
+			<button class="category__btn">Mobile<span class="category__count">1</span></button>
+			<button class="category__btn">R&D<span class="category__count">2</span></button>
+		</div>
 
+		<div class="work__projects">
+			<a href="#" class="project" target="blank">
+				<img src="imgs/projects/JSBW.png" alt="JSBW">
+				<div class="project__description">
+					<h3>장.씨.배우</h3>
+					<span>Vue와 Django를 활용한 영화 추천 웹서비스</span>
+				</div>
+			</a>
+		</div>
 	</section>
 
 	<!-- testimonials -->
