--- a/index.html
+++ b/index.html
@@ -197,12 +197,28 @@
 					<span>Vue와 Django를 활용한 영화 추천 웹서비스</span>
 				</div>
 			</a>
+
+			<a href="#" class="project" target="blank">
+				<img src="imgs/projects/gaitspeed.png" alt="gait speedometer">
+				<div class="project__description">
+					<h3>Gait Speedometer</h3>
+					<span>실시간 보행수, 보행속도 측정 실험용 어플리케이션</span>
+				</div>
+			</a>
 		</div>
 	</section>
 
 	<!-- testimonials -->
 	<section id="testimonials">
-
+		<h1>Testimonials</h1>
+		<h3>See what they say about me</h3>
+		<div class="testimonials">
+			<img src="imgs/testimonials/people1.jpg" alt="" class="testimoal__avarta">
+			<div class="testimoal__speech-bubble">
+				<p>blah blah</p>
+				<p class="name">Name / Company</p>
+			</div>
+		</div>
 	</section>
 
 	<!-- Contact -->
