--- a/index.html
+++ b/index.html
@@ -223,7 +223,16 @@
 
 	<!-- Contact -->
 	<section id="contact">
-
+		<h1 class="contact__title">Let's talk</h1>
+		<h2 class="contact__email">jinwoongma@gmail.com</h2>
+		<div class="contact__links">
+			<a href="https://github.com/jinwoongma">
+				<i class="fab fa-github-square"></i>
+			</a>
+			<a href="https://www.instagram.com/w95ng/">
+				<i class="fab fa-instagram-square"></i>
+			</a>
+		</div>
 	</section>
 </body>
 
