--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 		<div class="navbar__logo">
 			<img src="imgs/favicon.png" alt="brand logo" class="icon-2x">
 			<!-- <i class="fas fa-horse"></i> -->
-			<a href="#">Jinwoong</a>
 		</div>
 		<ul class="navbar__menu">
-			<li class="navbar__menu__item">Home</li>
+			<li class="navbar__menu__item active">Home</li>
 			<li class="navbar__menu__item">About</li>
 			<li class="navbar__menu__item">Skills</li>
 			<li class="navbar__menu__item">My work</li>
@@ -232,6 +231,7 @@
 			<a href="https://www.instagram.com/w95ng/">
 				<i class="fab fa-instagram-square"></i>
 			</a>
+			<p class="contact__rights">2020 Jinwwong Kim - All rignts reserved</p>
 		</div>
 	</section>
 </body>
