--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 	<!-- Home -->
 	<section id="home">
-		<img src="imgs/profile.jpeg" alt="Jinwoong's profile photo" class="home__avartar">
-		<h1 id="home__title">Hello, <br /> My name is Jinwoong Kim</h1>
-		<h2 id="home__description">남다른 목표의식을 가지고 빠르게 성과를 낼 수 있는 준비된 지원자입니다.</h2>
-		<button id="home__button">Contact Me</button>
+		<img src="imgs/profile.jpeg" alt="Jinwoong's profile photo" class="home__avatar">
+		<h1 class="home__title">Hello, <br /> My name is Jinwoong Kim</h1>
+		<h2 class="home__description">남다른 목표의식을 가지고 <br /> 빠르게 성과를 낼 수 있는 준비된 지원자입니다.</h2>
+		<button class="home__contact">Contact Me</button>
 	</section>
 
 	<!-- About -->
