--- a/index.html
+++ b/index.html
@@ -188,49 +188,55 @@
 
 	<!-- Work -->
 	<section id="work" class="section">
-		<h1>My work</h1>
-		<h3>Projects</h3>
-		<div class="work__categories">
-			<button class="category__btn">All <span class="category__count">5</span></button>
-			<button class="category__btn">Web <span class="category__count">2</span></button>
-			<button class="category__btn">Mobile <span class="category__count">1</span></button>
-			<button class="category__btn">R&D <span class="category__count">2</span></button>
-		</div>
-
-		<div class="work__projects">
-			<a href="#" class="project" target="blank">
-				<img src="imgs/projects/JSBW.png" alt="JSBW"  class="project__img">
-				<div class="project__description">
-					<h3>장.씨.배우</h3>
-					<span>Vue와 Django를 활용한 <br/> 영화 추천 웹서비스</span>
-				</div>
-			</a>
-
-			<a href="#" class="project" target="blank">
-				<img src="imgs/projects/gaitspeed.png" alt="gait speedometer" class="project__img">
-				<div class="project__description">
-					<h3>Gait Speedometer</h3>
-					<span>실시간 보행수, 보행속도 측정 <br/> 실험용 어플리케이션</span>
-				</div>
-			</a>
+		<div class="section__container">
+			<h1>My work</h1>
+			<h3>Projects</h3>
+			<div class="work__categories">
+				<button class="category__btn">All <span class="category__count">5</span></button>
+				<button class="category__btn">Web <span class="category__count">2</span></button>
+				<button class="category__btn">Mobile <span class="category__count">1</span></button>
+				<button class="category__btn">R&D <span class="category__count">2</span></button>
+			</div>
+	
+			<div class="work__projects">
+				<a href="#" class="project" target="blank">
+					<img src="imgs/projects/JSBW.png" alt="JSBW"  class="project__img">
+					<div class="project__description">
+						<h3>장.씨.배우</h3>
+						<span>Vue와 Django를 활용한 <br/> 영화 추천 웹서비스</span>
+					</div>
+				</a>
+	
+				<a href="#" class="project" target="blank">
+					<img src="imgs/projects/gaitspeed.png" alt="gait speedometer" class="project__img">
+					<div class="project__description">
+						<h3>Gait Speedometer</h3>
+						<span>실시간 보행수, 보행속도 측정 <br/> 실험용 어플리케이션</span>
+					</div>
+				</a>
+			</div>
 		</div>
 	</section>
 
 	<!-- testimonials -->
-	<section id="testimonials">
-		<h1>Testimonials</h1>
-		<h3>See what they say about me</h3>
-		<div class="testimonials">
-			<img src="imgs/testimonials/people1.jpg" alt="" class="testimoal__avarta">
-			<div class="testimoal__speech-bubble">
-				<p>blah blah</p>
-				<p class="name">Name / Company</p>
+	<section id="testimonials" class="section">
+		<div class="section__container">
+			<h1>Testimonials</h1>
+			<h3>See what they say about me</h3>
+			<div class="testimonials">
+				<div class="testimonial">
+					<img src="imgs/testimonials/people1.jpg" alt="" class="testimonial__avatar">
+					<div class="testimonial__speech-bubble">
+						<p>blah blah</p>
+						<p class="name">Name / Company</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
 
 	<!-- Contact -->
-	<section id="contact">
+	<section id="contact" class=section>
 		<h1 class="contact__title">Let's talk</h1>
 		<h2 class="contact__email">jinwoongma@gmail.com</h2>
 		<div class="contact__links">
@@ -240,7 +246,7 @@
 			<a href="https://www.instagram.com/w95ng/">
 				<i class="fab fa-instagram-square"></i>
 			</a>
-			<p class="contact__rights">2020 Jinwwong Kim - All rignts reserved</p>
+			<p class="contact__rights">2020 Jinwoong Kim - All rights reserved</p>
 		</div>
 	</section>
 </body>
