--- a/index.html
+++ b/index.html
@@ -21,21 +21,28 @@
 			<!-- <i class="fas fa-horse"></i> -->
 		</div>
 		<ul class="navbar__menu">
-			<li class="navbar__menu__item active">Home</li>
-			<li class="navbar__menu__item">About</li>
-			<li class="navbar__menu__item">Skills</li>
-			<li class="navbar__menu__item">My work</li>
-			<li class="navbar__menu__item">Testimonial</li>
-			<li class="navbar__menu__item">Contact</li>
+			<li class="navbar__menu__item active" data-link="#home">Home</li>
+			<li class="navbar__menu__item" data-link="#about">About</li>
+			<li class="navbar__menu__item" data-link="#skill">Skills</li>
+			<li class="navbar__menu__item" data-link="#work">My work</li>
+			<!-- <li class="navbar__menu__item" data-link="#home">Testimonial</li> -->
+			<li class="navbar__menu__item" data-link="#contact">Contact</li>
 		</ul>
+
+		<!-- Toggle Btn -->
+		<buttton class="navbar__toggle-btn">
+			<i class="fas fa-bars"></i>
+		</buttton>
 	</nav>
 
 	<!-- Home -->
 	<section id="home">
-		<img src="imgs/profile.jpeg" alt="Jinwoong's profile photo" class="home__avatar">
-		<h1 class="home__title">Hello, <br /> I'm Jinwoong Kim</h1>
-		<h2 class="home__description">남다른 목표의식을 가지고 <br /> 빠르게 성과를 낼 수 있는 준비된 지원자입니다.</h2>
-		<button class="home__contact">Contact Me</button>
+		<div class="home__container">
+			<img src="imgs/profile.jpeg" alt="Jinwoong's profile photo" class="home__avatar">
+			<h1 class="home__title">Hello, <br /> I'm Jinwoong Kim</h1>
+			<h2 class="home__description">남다른 목표의식을 가지고 <br /> 빠르게 성과를 낼 수 있는 준비된 지원자입니다.</h2>
+			<button class="home__contact">Contact Me</button>
+		</div>
 	</section>
 
 	<!-- About -->
@@ -206,6 +213,14 @@
 						<span>Vue와 Django를 활용한 <br/> 영화 추천 웹서비스</span>
 					</div>
 				</a>
+
+				<a href="#" class="project" target="blank">
+					<img src="imgs/projects/portfolio.png" alt="portfolio"  class="project__img">
+					<div class="project__description">
+						<h3>개인 포트폴리오</h3>
+						<span>HTML, CSS, JavaScript를 활용한 <br/> 반응형 웹 포트폴리오</span>
+					</div>
+				</a>
 	
 				<a href="#" class="project" target="blank">
 					<img src="imgs/projects/gaitspeed.png" alt="gait speedometer" class="project__img">
@@ -219,7 +234,7 @@
 	</section>
 
 	<!-- testimonials -->
-	<section id="testimonials" class="section">
+	<!-- <section id="testimonials" class="section">
 		<div class="section__container">
 			<h1>Testimonials</h1>
 			<h3>See what they say about me</h3>
@@ -233,7 +248,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<!-- Contact -->
 	<section id="contact" class=section>
@@ -250,5 +265,6 @@
 		</div>
 	</section>
 </body>
+
 
 </html>
