--- a/index.html
+++ b/index.html
@@ -264,6 +264,11 @@
 			<p class="contact__rights">2020 Jinwoong Kim - All rights reserved</p>
 		</div>
 	</section>
+
+	<!-- Arrow up -->
+	<button class="arrow-up">
+		<i class="fas fa-arrow-up"></i>
+	</button>
 </body>
 
 
