--- a/index.html
+++ b/index.html
@@ -199,14 +199,22 @@
 			<h1>My work</h1>
 			<h3>Projects</h3>
 			<div class="work__categories">
-				<button class="category__btn">All <span class="category__count">5</span></button>
-				<button class="category__btn">Web <span class="category__count">2</span></button>
-				<button class="category__btn">Mobile <span class="category__count">1</span></button>
-				<button class="category__btn">R&D <span class="category__count">2</span></button>
+				<button class="category__btn" data-filter='*'> 
+					All <span class="category__count">5</span>
+				</button>
+				<button class="category__btn" data-filter='web'>
+					Web <span class="category__count">2</span>
+				</button>
+				<button class="category__btn" data-filter='mobile'>
+					Mobile <span class="category__count">1</span>
+				</button>
+				<button class="category__btn" data-filter='r&d'>
+					R&D <span class="category__count">2</span>
+				</button>
 			</div>
 	
 			<div class="work__projects">
-				<a href="#" class="project" target="blank">
+				<a href="#" class="project" target="blank" data-type="web">
 					<img src="imgs/projects/JSBW.png" alt="JSBW"  class="project__img">
 					<div class="project__description">
 						<h3>장.씨.배우</h3>
@@ -214,7 +222,7 @@
 					</div>
 				</a>
 
-				<a href="#" class="project" target="blank">
+				<a href="#" class="project" target="blank" data-type="web">
 					<img src="imgs/projects/portfolio.png" alt="portfolio"  class="project__img">
 					<div class="project__description">
 						<h3>개인 포트폴리오</h3>
@@ -222,7 +230,7 @@
 					</div>
 				</a>
 	
-				<a href="#" class="project" target="blank">
+				<a href="#" class="project" target="blank" data-type="mobile">
 					<img src="imgs/projects/gaitspeed.png" alt="gait speedometer" class="project__img">
 					<div class="project__description">
 						<h3>Gait Speedometer</h3>
