--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 			</div>
 	
 			<div class="work__projects">
-				<a href="#" class="project" target="blank" data-type="web">
+				<a href="https://github.com/Jinwoongma/ssafy_final_pjt_JSBW" class="project" target="blank" data-type="web">
 					<img src="imgs/projects/JSBW.png" alt="JSBW"  class="project__img">
 					<div class="project__description">
 						<h3>장.씨.배우</h3>
