--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 					</div>
 				</a>
 
-				<a href="#" class="project" target="blank" data-type="web">
+				<a href="https://github.com/Jinwoongma/portfolio" class="project" target="blank" data-type="web">
 					<img src="imgs/projects/portfolio.png" alt="portfolio"  class="project__img">
 					<div class="project__description">
 						<h3>개인 포트폴리오</h3>
@@ -230,7 +230,7 @@
 					</div>
 				</a>
 	
-				<a href="#" class="project" target="blank" data-type="mobile">
+				<a href="https://github.com/Jinwoongma/GaitSpeedometer" class="project" target="blank" data-type="mobile">
 					<img src="imgs/projects/gaitspeed.png" alt="gait speedometer" class="project__img">
 					<div class="project__description">
 						<h3>Gait Speedometer</h3>
