--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<h1>About me</h1>
 		<p>의공학을 전공하며 학부 과정에서는 웨어러블 디바이스를 활용한 헬스케어 서비스에 관심이 있었습니다. 
 			헬스케어 스타트업에서 인턴으로 근무하며 웹/앱 서비스 개발에 대한 매력을 느껴 현재 삼성 청년 소프트웨어 아카데미 3기에서 웹 프론트엔드/백엔드 교육과정을 수료중입니다.
-			새로운 기술을 배우는 것을 좋아하고 빠르게 학습할 수 있습니다.
+			새로운 기술을 배우는 것을 좋아하고 빠르게 학습할 수 있으며 현재는 IOS 개발에 관심이 있습니다.
 		</p>
 		<div class="about__majors">
 			<div class="major">
@@ -113,9 +113,8 @@
 			<h1>Skills</h1>
 			<h2>Skills & Attributes</h2>
 			<p>
-				Experience with all phases of the software life-cycle. Passion for learning new technologies. Capable of 
-				working within a team environment and independently. Ability to plan and time schedule, work under strict 
-				time pressure and adapt quickly when needed.
+				Passion for learning new technologies. Capable of working within a team environment and independently. 
+				Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
 			</p>
 			<div class="skillset">
 				<div class="skillset__left">
@@ -123,16 +122,6 @@
 					<div class="skill">
 						<div class="skill__description">
 							<span>HTML</span>
-							<span>99%</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value" style="width:99%;"></div>
-						</div>
-					</div>
-	
-					<div class="skill">
-						<div class="skill__description">
-							<span>CSS</span>
 							<span>90%</span>
 						</div>
 						<div class="skill__bar">
@@ -142,11 +131,21 @@
 	
 					<div class="skill">
 						<div class="skill__description">
-							<span>JavaScript</span>
-							<span>70%</span>
+							<span>CSS</span>
+							<span>80%</span>
 						</div>
 						<div class="skill__bar">
-							<div class="skill__value" style="width:70%;"></div>
+							<div class="skill__value" style="width:80%;"></div>
+						</div>
+					</div>
+	
+					<div class="skill">
+						<div class="skill__description">
+							<span>JavaScript</span>
+							<span>60%</span>
+						</div>
+						<div class="skill__bar">
+							<div class="skill__value" style="width:60%;"></div>
 						</div>
 					</div>
 	
@@ -163,10 +162,10 @@
 					<div class="skill">
 						<div class="skill__description">
 							<span>Django</span>
-							<span>80%</span>
+							<span>70%</span>
 						</div>
 						<div class="skill__bar">
-							<div class="skill__value" style="width:80%;"></div>
+							<div class="skill__value" style="width:70%;"></div>
 						</div>
 					</div>
 	
