add new project

--- a/index.html
+++ b/index.html
@@ -236,6 +236,22 @@
 						<span>실시간 보행수, 보행속도 측정 <br/> 실험용 어플리케이션</span>
 					</div>
 				</a>
+
+				<a href="#" class="project" target="blank" data-type="mobile">
+					<img src="imgs/projects/falling.png" alt="falling detection" class="project__img">
+					<div class="project__description">
+						<h3>보행분석 시스템 개발</h3>
+						<span>웨어러블 벨트를 활용한 <br/> 4방향 낙상 감지 시스템 개발</span>
+					</div>
+				</a>
+
+				<a href="#" class="project" target="blank" data-type="mobile">
+					<img src="imgs/projects/HRV.png" alt="heart rate variability" class="project__img">
+					<div class="project__description">
+						<h3>초단기 심박변이도(HRV) 분석 기술 연구</h3>
+						<span>휴식, 운동, 운동 후 회복 상태에서 <br/>초단기 HRV 분석의 활용가능성 평가</span>
+					</div>
+				</a>
 			</div>
 		</div>
 	</section>
