add new project

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 					</div>
 				</a>
 
-				<a href="#" class="project" target="blank" data-type="mobile">
+				<a href="#" class="project" target="blank" data-type="r&d">
 					<img src="imgs/projects/falling.png" alt="falling detection" class="project__img">
 					<div class="project__description">
 						<h3>보행분석 시스템 개발</h3>
@@ -245,7 +245,7 @@
 					</div>
 				</a>
 
-				<a href="#" class="project" target="blank" data-type="mobile">
+				<a href="#" class="project" target="blank" data-type="r&d">
 					<img src="imgs/projects/HRV.png" alt="heart rate variability" class="project__img">
 					<div class="project__description">
 						<h3>초단기 심박변이도(HRV) 분석 기술 연구</h3>
