--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 								<div class="slideshow-container">
 									<div class="falling-slide fade">
 										<div class="numbertext">1 / 3</div>
-										<img src="imgs/projects/falling/그림1.png" style="width:80%">
+										<img src="imgs/projects/falling/intro.png" style="width:80%">
 									</div>
 								
 									<div class="falling-slide fade">
